[package]
name = "domain-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.4.1"
regex = "1.9.5"
publicsuffix = "2.2.3"
idna = "0.4.0"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1.0"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
reqwest = "0.11.24"
